Button overlay overlap fixed

--- a/assets/css/map.css
+++ b/assets/css/map.css
@@ -51,7 +51,7 @@ map-view {
 
 /* Show/Hide Sidebar Button positioning */
 #showHideSidebarButton {
-    z-index: 1001;
+    z-index: 1;
     position: absolute;
     left: calc(80vw + 5px);
     top: 40%;
